@@ -1,3 +1,12 @@
+2007-03-26  Mark Rowe  <mrowe@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        Upload crash logs from DumpRenderTree as part of the test results to ease debugging
+        of hard-to-reproduce crashes.
+
+        * BuildSlaveSupport/build.webkit.org-config/webkit/steps.py:
+
 2007-03-23  George Staikos  <staikos@kde.org>
 
         Reviewed and committed by George.
